PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-68_expression_arithm/gcc-compile.txt
input.c:7:5: error: use of undeclared identifier 'e'
    e = 2;
    ^
input.c:8:15: error: use of undeclared identifier 'e'
    res = 5*a*e+b*(b+c+d);
              ^
2 errors generated.

return code: 1
